<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"

        android:orientation="vertical">
    <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/calculate_imc"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculadora_saudavel"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sua_sa_de_primeiro"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/holo_green_dark"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_que_vamos_calcular_hoje"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                tools:ignore="TextContrastCheck,TextContrastCheck"/>
        <Button
                android:id="@+id/btc_imc"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/indice_de_massa_corporal_imc"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:background="@drawable/botao_branco_inicial"
                app:backgroundTint="#FBFBFB"
                android:textColor="@android:color/holo_green_dark"
                tools:ignore="TextContrastCheck"

        />

        <Button
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/necessidades_cal_ricas_di_rias"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/botao_branco_inicial"
                android:layout_marginTop="16dp"
                app:backgroundTint="#FFFFFF" android:textColor="@android:color/holo_green_dark"
                tools:ignore="TextContrastCheck,TextContrastCheck"
                android:id="@+id/btc_ncd"

        />
        
    </LinearLayout>


</LinearLayout>